# spec-driven-skills

./: README.md  skills-lock.json  tessl.json
.github/workflows/: tessl-eval.yml
sdx-commit/: SKILL.md
sdx-commit/.codex/skills/: tessl__converting-skill-to-tessl-tile
sdx-commit/evals/scenario-0/: criteria.json
sdx-commit/evals/scenario-1/: criteria.json
sdx-commit/evals/scenario-2/: capability.txt
sdx-commit/evals/scenario-3/: capability.txt  task.md
skills/sdx-commit/: tessl.json  tile.json
skills/sdx-commit/.codex/skills/: tessl__creating-eval-scenarios
skills/sdx-commit/evals/: summary_infeasible.json
skills/sdx-commit/evals/scenario-0/: capability.txt
skills/sdx-commit/evals/scenario-1/: capability.txt  task.md
skills/sdx-commit/evals/scenario-3/: criteria.json
skills/sdx-commit/evals/scenario-4/: capability.txt  criteria.json  task.md
tiles/sdx-commit/: SKILL.md
tiles/sdx-commit/evals/: instructions.json  summary.json
tiles/sdx-commit/evals/scenario-0/: task.md
tiles/sdx-commit/evals/scenario-2/: criteria.json  task.md
tiles/sdx-commit/skills/sdx-commit/: SKILL.md
tiles/sdx-project/: tile.json
tiles/sdx-project/evals/: instructions.json  summary.json  summary_infeasible.json
tiles/sdx-project/evals/scenario-0/: capability.txt  criteria.json  task.md
tiles/sdx-project/evals/scenario-1/: capability.txt  criteria.json  task.md
tiles/sdx-project/skills/sdx-project-kickoff/references/stacks/react-rust/: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  Rocket.toml  dev.sh  frontend-package.json  openspec-config.yaml
(+25 files in other folders)
